force-app/main/default/objects/Discount_Rule__mdt/fields/Discount_Pct__c.field-meta.xml
<CustomField>
    <fullName>Discount_Pct__c</fullName>
    <label>Discount %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>